# Shein-Calculator-Demo

./: CMakeLists.txt  Calculator.pro  Calculator.pro.user.fba89d0  calculator.cpp  calculator.h  calculator.ui
